fix(stacked): align math imgs with radio buttons

--- a/Content/Styles/Stack/Site.scss
+++ b/Content/Styles/Stack/Site.scss
@@ -215,7 +215,7 @@ html, body {
 }
 
 .number img {
-    margin-top: 14px;
+    margin-top: -5px;
 }
 
 .num-container {
